# ghzinga

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ghzinga.cast  slophammer.yml
docs/: 2026-05-31-gh-cli-reference-notes.md  2026-05-31-gh-dash-preview-architecture.md  2026-05-31-gh-dash-preview-render-analysis.md  2026-05-31-gh-dash-preview-rendering-deep-dive.md  2026-05-31-ghzinga-capture-evidence-refresh-plan.md  2026-05-31-ghzinga-commit-author-pagination-plan.md  2026-05-31-ghzinga-commit-comment-thread-plan.md  2026-05-31-ghzinga-commit-deployment-pagination-plan.md  2026-05-31-ghzinga-commit-pagination-plan.md  2026-05-31-ghzinga-deployment-item-pagination-plan.md  2026-05-31-ghzinga-implementation-plan.md  2026-05-31-ghzinga-label-assignee-pagination-plan.md  2026-05-31-ghzinga-linked-resource-pagination-plan.md  2026-05-31-ghzinga-responsive-chrome-plan.md  2026-05-31-ghzinga-responsive-tui-plan.md  2026-05-31-ghzinga-review-pagination-plan.md  2026-05-31-ghzinga-review-request-pagination-plan.md  2026-05-31-ghzinga-revision-marker-plan.md  2026-05-31-ghzinga-status-rollup-pagination-plan.md  2026-05-31-ghzinga-timeline-schema-coverage-plan.md  2026-05-31-ghzinga-ux-capture-report.md  2026-05-31-ghzinga-verification-matrix.md  2026-05-31-ghzoom-capture-evidence-refresh-plan.md  2026-05-31-ghzoom-commit-author-pagination-plan.md  2026-05-31-ghzoom-commit-comment-thread-plan.md  2026-05-31-ghzoom-commit-deployment-pagination-plan.md  2026-05-31-ghzoom-commit-pagination-plan.md  2026-05-31-ghzoom-deployment-item-pagination-plan.md  2026-05-31-ghzoom-implementation-plan.md  2026-05-31-ghzoom-label-assignee-pagination-plan.md  2026-05-31-ghzoom-linked-resource-pagination-plan.md  2026-05-31-ghzoom-responsive-chrome-plan.md  2026-05-31-ghzoom-responsive-tui-plan.md  2026-05-31-ghzoom-review-pagination-plan.md  2026-05-31-ghzoom-review-request-pagination-plan.md  2026-05-31-ghzoom-revision-marker-plan.md  2026-05-31-ghzoom-status-rollup-pagination-plan.md  2026-05-31-ghzoom-timeline-schema-coverage-plan.md  2026-05-31-ghzoom-ux-capture-report.md  2026-05-31-ghzoom-verification-matrix.md  (+17 more)
fixtures/: issue-66943.json  issue-88499.json  pr-81834.json
scripts/: ci-local.sh  install.sh  live-smoke.sh  update-capture-manifests.py  verify-install.sh  verify-no-png-captures.sh
src/: cli.rs  config.rs  control.rs  fetch.rs  lib.rs  main.rs  runner.rs  session.rs
tests/: architecture.rs  (+1 more)
(+877 files in other folders)
