[package]
name = "ghzinga"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
description = "Terminal UI for monitoring GitHub pull requests and issues."
license = "MIT"
repository = "https://github.com/dutifuldev/ghzinga"
homepage = "https://github.com/dutifuldev/ghzinga"
documentation = "https://docs.rs/ghzinga"
readme = "README.md"
keywords = ["github", "terminal", "tui", "pull-request", "issues"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/AGENTS.md", "/captures/**"]
autobins = false

[[bin]]
name = "gzg"
path = "src/main.rs"

[[bin]]
name = "ghzinga"
path = "src/bin/ghzinga.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
